--- a/templates/partials/shared/brainstorm.hbs
+++ b/templates/partials/shared/brainstorm.hbs
@@ -68,12 +68,14 @@
 				decider=true				
 				preview=true
 				time=config.thinkSeconds
+				stage="think"
 				body="Press the red button to start!"
 		}}
 
 		{{> component/timer				
 				preview=true
 				time=config.thinkSeconds
+				stage="think"
 				body=question
 		}}
 	</div>
