--- a/templates/partials/shared/doubledown.hbs
+++ b/templates/partials/shared/doubledown.hbs
@@ -109,7 +109,8 @@
 		{{> component/timer
 				stage='doubledown'
 				active_player=player.isActive 
-				body_active=activePlayer.username
+				body=question
+				user=activePlayer.username
 				role=activePlayer.role.title
 				time=config.doubledownSeconds
 		}}
