--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -49,7 +49,7 @@
 		<div class="game-features">
 			<div class="feature-one col-lg-4 col-xs-12">
 				<div class="feature-image">
-					<img src="{{{cloudinaryUrl content.featureOneIcon width=auto height=100 crop='scale' quality=100}}}">
+					{{{cloudinaryUrl 'v1494428564/at-stake/layout/landing/listen' height=105 format='svg'}}}
 				</div>
 				<div class="feature-header">
 					<h3>{{{content.featureOneTitle.html}}}</h3>
@@ -60,7 +60,7 @@
 			</div>
 			<div class="feature-two col-lg-4 col-xs-12">
 				<div class="feature-image">
-					<img src="{{{cloudinaryUrl content.featureTwoIcon width=auto height=100 crop='scale' quality=100}}}">
+					{{{cloudinaryUrl 'v1494430931/at-stake/layout/landing/trophy' height=105 format='svg'}}}
 				</div>
 				<div class="feature-header">
 					<h3>{{{content.featureTwoTitle.html}}}</h3>
@@ -71,7 +71,7 @@
 			</div>
 			<div class="feature-three col-lg-4 col-xs-12">
 				<div class="feature-image">
-					<img src="{{{cloudinaryUrl content.featureThreeIcon width=auto height=100 crop='scale' quality=100}}}">
+					{{{cloudinaryUrl 'v1494428564/at-stake/layout/landing/coins' height=105 format='svg'}}}
 				</div>
 				<div class="feature-header">
 					<h3>{{{content.featureThreeTitle.html}}}</h3>
@@ -122,5 +122,7 @@
 					</div>
 				</div>
 		</div>
-		<div class="logo"><img class="el-logo" src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1488406912/at-stake-site/el_logo_square_white_720.png"></div>
+		<div class="logo">
+			{{{cloudinaryUrl 'v1494428564/at-stake/layout/landing/el-logo' class='el-logo' height=150 format='svg'}}}
+		</div>
 </div>
