remove scrolling from in-game

--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -204,6 +204,8 @@ socketEvents = function(eventId, eventData) {
 
         case 'connect':
 
+        $('html, body').css('overflow-y', 'hidden');
+
             ion.sound.play("player_pink");
             
             if(sessionStorage.getItem('gameCode')) {
