overflow html in game

--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -204,7 +204,7 @@ socketEvents = function(eventId, eventData) {
 
         case 'connect':
 
-        $('html, body').css('overflow-y', 'hidden');
+            $('html').css('overflow-y', 'hidden');
 
             ion.sound.play("player_pink");
             
