remove background image from absolute positioning

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -178,7 +178,7 @@
 
 			// Get all absolutely-positioned elements
 			var outerAbsolutes = 
-			$('#wrapper, #wrapper :not(#gameContent *, #homeContent *, #stages-bar *, .modal, #bottom-bar)')
+			$('#wrapper, #wrapper :not(#gameContent *, #homeContent *, #stages-bar *, .modal, #bottom-bar, #background-logo)')
 			.filter(function(){
 			  return ($(this).css('position') == 'absolute' || $(this).css('position') == 'fixed');
 			});
