--- a/templates/partials/shared/pitch.hbs
+++ b/templates/partials/shared/pitch.hbs
@@ -12,6 +12,7 @@
 
 		{{> component/instructions
 				heading="Listen to the decider"
+				body="Get ready to pitch your proposal to the group!"
 		}}
 
 		{{> component/speech 
@@ -36,6 +37,7 @@
 
 		{{> component/instructions
 				heading="Listen to the decider"
+				body="Get ready to pitch your proposal to the group!"
 		}}
 
 		{{> component/speech 
@@ -60,6 +62,7 @@
 
 		{{> component/instructions
 				heading="Listen to the decider"
+				body="Get ready to pitch your proposal to the group!"
 		}}
 
 		{{> component/speech 
