--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -82,8 +82,7 @@
                             <div id="header" class="row">
                         
                                 <button id="btn-menu-back" class="btn" type="submit" name="submit" data-keep_enabled="true">
-                                    <div id="arrow"></div>
-                                    <div id="label">back to game</div>
+                                    <div id="x-shape"></div>
                                 </button>
 
                             </div>
