--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -99,7 +99,7 @@
       <div class="col-xs-12 col-centered  form">
 
         <div id="btn-tutorial" data-event="game:start" data-package='{"tutorial": "true"}' class="btn btn-default submit">
-          <h2>Play Tutorial</h2>
+          <h2>See Instructions</h2>
         </div>
         <div class="btn_cap">Learn the rules of the game, how to play, and how to win!</div>
 
