--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -206,7 +206,7 @@ socketEvents = function(eventId, eventData) {
 
             // prevent scrolling on connect
             $('#wrapper').css('overflow-y', 'hidden').css('position', 'fixed');
-            findAbsolutes();
+            // $('#wrapper')
 
             ion.sound.play("player_pink");
             
