--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -3,8 +3,7 @@
  	<div>       
 	  
 	  <button id="btn-close-role-card" class="btn" type="submit" name="submit" data-keep_enabled="true">
-	      <div id="arrow"></div>
-	      <div id="label">back to game</div>
+	      <div id="x-shape"></div>
 	  </button>
 
 	</div>
