--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -3,7 +3,7 @@
  	<div>       
 	  
 	  <button id="btn-close-role-card" class="btn" type="submit" name="submit" data-keep_enabled="true">
-	      <div id="x-shape"></div>
+	     {{{cloudinaryUrl '/v1494604113/at-stake/layout/shape.svg' height=100}}}
 	  </button>
 
 	</div>
