--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -82,7 +82,7 @@
                             <div id="header" class="row">
                         
                                 <button id="btn-menu-back" class="btn" type="submit" name="submit" data-keep_enabled="true">
-                                    <div id="x-shape"></div>
+                                    {{{cloudinaryUrl '/v1494604113/at-stake/layout/shape.svg' height=auto}}}
                                 </button>
 
                             </div>
