--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -5,8 +5,8 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>@Stake</title>
-        <meta name="description" content="@Stake is an online and mobile role-playing game that fosters democracy, empathy, and creative problem solving for civic issues.">
+        <title>@stake</title>
+        <meta name="description" content="@stake is a role playing game that fosters creativity and empathy in small group deliberation.">
         <meta name="author" content="Engagement Lab at Emerson College">
         <meta name="theme-color" content="#00dcba">
 
