--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -22,7 +22,7 @@
     </div>
     <div class="login-footer">
       <section id="description">
-        <p>@Stake is a fast paced role-playing game promoting empathy and creativity among diverse perspectives.</p>
+        <p>@stake is a role playing game that fosters creativity and empathy in small group deliberation.</p>
       </section>
       <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/layout/e-l-logo.svg" height='auto' width='226px' style="margin: 16px"> 
     </div>
