--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -19,7 +19,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         {{/ifeq}}
         {{!-- Open Graph --}}
-        <meta property="og:image" content="http://res.cloudinary.com/engagement-lab-home/image/upload/v1494604113/at-stake/layout/logo.svg" />
+        <meta property="og:image" content="http://res.cloudinary.com/engagement-lab-home/image/upload/v1494604113/at-stake/layout/logo_3x.png" />
 
         {{!-- Load web SDK's core script/docs --}}
         {{> core environment=env}}
