remove login-header from debrief screens

--- a/templates/partials/shared/debrief.hbs
+++ b/templates/partials/shared/debrief.hbs
@@ -1,8 +1,8 @@
 {{!-- DEBRIEF UI --}}
 <div id="debrief">
-  <div id="login-header" class="hidden-el">
-    <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/layout/logo.svg" height='auto' width='200px'/>
-  </div>
+  // <div id="login-header" class="hidden-el">
+  //   <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/layout/logo.svg" height='auto' width='200px'/>
+  // </div>
 
 	<div class="screen initial" data-animation="debrief">
 
